# ctypes-example

./: Makefile  README.md  pyproject.toml
ctexample/: __init__.py  fun.py
ctexample/src/: fun.c  fun.h  main.c
